Mejora de código en prueba T0003